base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-hello
  labels:
    name: fastapi-hello
    app: fastapi
    environment: base
