base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-hello
  namespace: fastapi-hello
  labels:
    app: fastapi-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-hello
  template:
    metadata:
      labels:
        app: fastapi-hello
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: fastapi-hello
        image: 755494748635.dkr.ecr.eu-central-1.amazonaws.com/fastapi-hello:latest
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
